// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionIconToggle should render a button 1`] = `
<TooltipTrigger
  label="Click me, I'm inactive"
  tooltipPlacement="top"
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="my-icon-toggle tc-icon-toggle theme-tc-icon-toggle"
    disabled={false}
    id="my-inactive-action"
    onClick={[Function]}
  >
    <Icon
      name="talend-panel-opener-right"
    />
  </Button>
</TooltipTrigger>
`;

exports[`ActionIconToggle should render an active button 1`] = `
<TooltipTrigger
  label="Click me, I'm inactive"
  tooltipPlacement="top"
>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="my-icon-toggle tc-icon-toggle theme-tc-icon-toggle theme-active"
    disabled={false}
    id="my-inactive-action"
    onClick={[Function]}
  >
    <Icon
      name="talend-panel-opener-right"
    />
  </Button>
</TooltipTrigger>
`;
